@@ -24,6 +24,7 @@
 #define NEED_CPU_REG_SHORTCUTS 1
 #include "bochs.h"
 #include "cpu.h"
+#include "msr.h"
 #define LOG_THIS BX_CPU_THIS_PTR
 
 #if BX_CPU_LEVEL >= 5
@@ -176,6 +177,49 @@ bx_bool BX_CPP_AttrRegparmN(2) BX_CPU_C::rdmsr(Bit32u index, Bit64u *msr)
       val64 = BX_CPU_THIS_PTR lapic.get_tsc_deadline();
       break;
 #endif
+
+    // SCA preention MSRs
+    case BX_MSR_IA32_ARCH_CAPABILITIES:
+      if (! is_cpu_extension_supported(BX_ISA_SCA_MITIGATIONS)) {
+        BX_ERROR(("RDMSR IA32_ARCH_CAPABILITIES: not enabled in the cpu model"));
+        return handle_unknown_rdmsr(index, msr);
+      }
+      //     [0]: RDCL_NO: The processor is not susceptible to Rogue Data Cache Load (RDCL)
+      //     [1]: IBRS_ALL: The processor supports enhanced IBRS
+      //     [2]: RSBA: The processor supports RSB Alternate
+      //     [3]: SKIP_L1DFL_VMENTRY: indicates the hypervisor need not flush the L1D on VM entry
+      //     [4]: SSB_NO: Processor is not susceptible to Speculative Store Bypass
+      //  [63:5]: reserved
+      val64 = 0x1F; // set bits [4:0]
+      break;
+
+    case BX_MSR_IA32_SPEC_CTRL:
+      if (! is_cpu_extension_supported(BX_ISA_SCA_MITIGATIONS)) {
+        BX_ERROR(("WRMSR IA32_SPEC_CTRL: not enabled in the cpu model"));
+        return handle_unknown_rdmsr(index, msr);
+      }
+      //    [0] - Enable IBRS: Indirect Branch Restricted Speculation
+      //    [1] - Enable STIBP: Single Thread Indirect Branch Predictors
+      //    [2] - Enable SSCB: Speculative Store Bypass Disable
+      // [63:3] - reserved
+      val64 = BX_CPU_THIS_PTR msr.ia32_spec_ctrl;
+      break;
+
+    case BX_MSR_IA32_PRED_CMD:
+      if (! is_cpu_extension_supported(BX_ISA_SCA_MITIGATIONS)) {
+        BX_ERROR(("WRMSR IA32_PRED_CMD: not enabled in the cpu model"));
+        return handle_unknown_rdmsr(index, msr);
+      }
+      // write only MSR, no need to remember written value
+      return 0;
+
+    case BX_MSR_IA32_FLUSH_CMD:
+      if (! is_cpu_extension_supported(BX_ISA_SCA_MITIGATIONS)) {
+        BX_ERROR(("WRMSR IA32_FLUSH_CMD: not enabled in the cpu model"));
+        return handle_unknown_rdmsr(index, msr);
+      }
+      // write only MSR, no need to remember written value
+      return 0;
 
 #if BX_SUPPORT_VMX
 /*
@@ -702,6 +746,59 @@ bx_bool BX_CPP_AttrRegparmN(2) BX_CPU_C::wrmsr(Bit32u index, Bit64u val_64)
       BX_CPU_THIS_PTR lapic.set_tsc_deadline(val_64);
       break;
 #endif
+
+    // SCA preention MSRs
+    case BX_MSR_IA32_ARCH_CAPABILITIES:
+      if (! is_cpu_extension_supported(BX_ISA_SCA_MITIGATIONS)) {
+        BX_ERROR(("WRMSR IA32_ARCH_CAPABILITIES: not enabled in the cpu model"));
+        return handle_unknown_wrmsr(index, val_64);
+      }
+      BX_ERROR(("WRMSR: IA32_ARCH_CAPABILITIES is read only MSR"));
+      return 0;
+
+    case BX_MSR_IA32_SPEC_CTRL:
+      if (! is_cpu_extension_supported(BX_ISA_SCA_MITIGATIONS)) {
+        BX_ERROR(("WRMSR IA32_SPEC_CTRL: not enabled in the cpu model"));
+        return handle_unknown_wrmsr(index, val_64);
+      }
+      //    [0] - Enable IBRS: Indirect Branch Restricted Speculation
+      //    [1] - Enable STIBP: Single Thread Indirect Branch Predictors
+      //    [2] - Enable SSCB: Speculative Store Bypass Disable
+      // [63:3] - reserved
+      if (val_64 & ~(BX_CONST64(0x7))) {
+        BX_ERROR(("WRMSR: attempt to set reserved bits of IA32_SPEC_CTRL !"));
+        return 0;
+      }
+      BX_CPU_THIS_PTR msr.ia32_spec_ctrl = val32_lo;
+      break;
+
+    case BX_MSR_IA32_PRED_CMD:
+      if (! is_cpu_extension_supported(BX_ISA_SCA_MITIGATIONS)) {
+        BX_ERROR(("WRMSR IA32_PRED_CMD: not enabled in the cpu model"));
+        return handle_unknown_wrmsr(index, val_64);
+      }
+      //    [0] - Indirect Branch Prediction Barrier (IBPB)
+      // [63:1] - reserved
+      if (val_64 & ~(BX_CONST64(0x1))) {
+        BX_ERROR(("WRMSR: attempt to set reserved bits of IA32_PRED_CMD !"));
+        return 0;
+      }
+      // write only MSR, no need to remember written value
+      break;
+
+    case BX_MSR_IA32_FLUSH_CMD:
+      if (! is_cpu_extension_supported(BX_ISA_SCA_MITIGATIONS)) {
+        BX_ERROR(("WRMSR IA32_FLUSH_CMD: not enabled in the cpu model"));
+        return handle_unknown_wrmsr(index, val_64);
+      }
+      //    [0] - WBINVD DL1 Cache
+      // [63:1] - reserved
+      if (val_64 & ~(BX_CONST64(0x1))) {
+        BX_ERROR(("WRMSR: attempt to set reserved bits of IA32_FLUSH_CMD !"));
+        return 0;
+      }
+      // write only MSR, no need to remember written value
+      break;
 
 #if BX_SUPPORT_VMX
     // Support only two bits: lock bit (bit 0) and VMX enable (bit 2)
